tests/ui/diagnostic_namespace/on_unimplemented/on_impl_trait.stderr
error[E0277]: blah
  --> $DIR/on_impl_trait.rs:16:9
   |
LL |     foo(&1);
   |     --- ^^ blah
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Test` is not implemented for `{integer}`
   = note: blah
help: this trait has no implementations, consider adding one
  --> $DIR/on_impl_trait.rs:6:1
   |
LL | trait Test {}
   | ^^^^^^^^^^
   = note: required for `{integer}` to implement `Alias`
note: required by a bound in `foo`
  --> $DIR/on_impl_trait.rs:13:11
   |
LL | fn foo<T: Alias>(v: &T) {}
   |           ^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
